# coggml

./: .gitignore  README.md
.github/workflows/: fetch.yml  sync.yml  syncrepos.yml
action-create-release/: package-lock.json  package.json
ci/: setup.sh
docs/: cognitive-grammar-examples.md  distributed-cognitive-architecture.md  implementation-guide.md
examples/cognitive-agents/: CMakeLists.txt  cognitive-agent.c  cognitive-agent.h  demo.c
free-disk-space/: action.yml
ggml/: CMakeLists.txt  demo-financial-tensor.sh
ggml/docs/: financial-tensor-architecture.md
ggml/examples/: CMakeLists.txt  financial-tensor-example.c
ggml/examples/cognitive-agents/: cognitive-agent.c  cognitive-agent.h  demo.c
ggml/examples/cognitive-tensor-demo/: CMakeLists.txt  demo.c
ggml/examples/distributed-cognitive-demo/: CMakeLists.txt  demo.c  test-integration.c
ggml/include/: ggml-cogfluence.h  ggml-cognitive-tensor.h  ggml-distributed-cognitive.h  ggml-financial-tensor.h  ggml-moses.h  ggml-opencog.h  ggml-phase3-self-modification.h
ggml/src/: CMakeLists.txt  ggml-cogfluence.c  ggml-cognitive-tensor.c  ggml-distributed-cognitive.c  ggml-financial-tensor.c  ggml-moses.c  ggml-opencog.c  ggml-phase3-self-modification.c
ggml/tests/: CMakeLists.txt  test-cognitive-tensor.c  test-financial-tensor-quick.c  test-financial-tensor.c  test-moses.c  test-phase2-integration.c  test-phase3-self-modification.c  test-pln-inference.c
llama.cpp/.github/actions/get-tag-name/: action.yml
llama.cpp/tools/server/webui/: package-lock.json
llama.vscode/: package-lock.json
p1/: README.md
